tests/snapshots/cli__review_card_without_meta_remembered_no.snap
---
source: tests/cli.rs
info:
  program: logseq-srs
  args:
    - review
    - /tmp/.tmpLyCnci
    - "--at=2025-11-22T15:04:05.123456789Z"
  page_lines:
    - "- Not card"
    - "- What is a sphere? #card"
    - "  - Set of points in a 3 dimensional space that are equidistant from a center point."
    - "- Not card"
    - ""
  interaction_meta:
    expected type of interaction: review
    remembered: "false"
---
- Not card
- What is a sphere? #card
  card-last-interval:: 1
  card-repeats:: 1
  card-ease-factor:: 2.5
  card-next-schedule:: 2025-11-23T15:04:05.123Z
  card-last-reviewed:: 2025-11-22T15:04:05.123Z
  card-last-score:: 5
  card-fsrs-metadata:: {"due":"2025-11-23T15:04:05.123Z","stability":0.407,"difficulty":7.21,"elapsed_days":0,"scheduled_days":1,"reps":1,"lapses":0,"state":"Review","last_review":"2025-11-22T15:04:05.123Z"}
  - Set of points in a 3 dimensional space that are equidistant from a center point.
- Not card
