tests/snapshots/cli__review_card_without_meta_remembered_yes.snap
---
source: tests/cli.rs
info:
  program: losrs
  args:
    - review
    - /tmp/.tmpDp1ChA
    - "--at=2025-11-22T15:04:05.123456789Z"
  page_lines:
    - "- Not card"
    - "- What is a sphere? #card"
    - "  - Set of points in a 3 dimensional space that are equidistant from a center point."
    - "- Not card"
    - ""
  interaction_meta:
    expected type of interaction: review
    remembered: "true"
---
- Not card
- What is a sphere? #card
  card-last-interval:: 3
  card-repeats:: 1
  card-ease-factor:: 2.5
  card-next-schedule:: 2025-11-25T15:04:05.123Z
  card-last-reviewed:: 2025-11-22T15:04:05.123Z
  card-last-score:: 5
  card-fsrs-metadata:: {"due":"2025-11-25T15:04:05.123Z","stability":3.126,"difficulty":5.315,"elapsed_days":0,"scheduled_days":3,"reps":1,"lapses":0,"state":"Review","last_review":"2025-11-22T15:04:05.123Z"}
  - Set of points in a 3 dimensional space that are equidistant from a center point.
- Not card
