tests/snapshots/cli__review_remembered_no.snap
---
source: tests/cli.rs
info:
  program: logseq-srs
  args:
    - review
    - /tmp/.tmpKOdNm2/page.md
    - "--at=2025-11-22T00:00:00Z"
  page_lines:
    - "- Not card"
    - "- What is a sphere? #card"
    - "  card-last-interval:: 244.14"
    - "  card-repeats:: 6"
    - "  card-ease-factor:: 3.1"
    - "  card-next-schedule:: 2025-11-21T00:00:00.000Z"
    - "  card-last-reviewed:: 2025-03-22T09:54:57.202Z"
    - "  card-last-score:: 5"
    - "  - Set of points in a 3 dimensional space that are equidistant from a center point."
    - "- Not card"
    - ""
  interaction_meta:
    remembered: "false"
    expected type of interaction: review
---
- Not card
- What is a sphere? #card
  card-last-interval:: 1
  card-repeats:: 0
  card-ease-factor:: 2.5
  card-next-schedule:: 2025-11-23T00:00:00.000Z
  card-last-reviewed:: 2025-11-22T00:00:00.000Z
  card-last-score:: 5
  - Set of points in a 3 dimensional space that are equidistant from a center point.
- Not card
