tests/snapshots/cli__root_help.snap
---
source: tests/cli.rs
info:
  program: losrs
  args:
    - "--help"
  envs: {}
  page_lines:
    - - ""
---
success: true
exit_code: 0
----- stdout -----
Work with Spaced Repetition Cards (SRS) embedded in Logseq pages

Usage: losrs <COMMAND>

Commands:
  show          print cards
  review        review cards
  metadata      prints metadata for cards
  fix-metadata  fix metadata for cards
  help          Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

----- stderr -----
